# chatting_stude

./: setup.cfg
src/chat/: __main__.py  client.py  server.py
src/chat_9155.egg-info/: PKG-INFO  SOURCES.txt
